# csound-plugins

./: CMakeLists.txt
cmake/: CompilerOptimizations.cmake
websocket2/: CMakeLists.txt  Websocket2.c  Websocket2.cpp  Websocket2.h  test.csd  test.html  websocket_all.c  websocket_common.h  websocket_get.c  websocket_get.h  websocket_set.c  websocket_set.h
websockets/: CMakeLists.txt  WebSocketOpcode.c  WebSocketOpcode.h  test.csd  test.html
